link navigation settings

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ a {
 }
 .navbar-toggler-icon {
     height: 1em;
-   color: #FFA500;
+    color: #FFA500;
 }
 .navbar-brand:hover {
   color: #FFA500;
@@ -61,15 +61,14 @@ a {
 }
 
 .carousel-item img {
-    height: 90vh;
+    height: 93vh;
 }
-.favorites-cards {
-    padding: 25px 0;
-    weight: 100%;
+#about {
+    padding: 30px 0;
 }
-.favorites-title {
+.about-title {
     text-align: center;
-    font-size: 32px;
+    font-size: 42px;
     font-weight: bold;
     margin-bottom: 20px;
 }
@@ -86,14 +85,14 @@ a {
     height: 250px;
 }
 
-.blogs {
-    padding: 25px 0;
-    background: #808080;
+#menu {
+    padding: 30px 0;
 }
-.blogs-title {
-    color: white;
+.menu-title {
+    color: black;
     text-align: center;
     margin-bottom: 20px;
+    font-size: 42px;
 }
 
 .card-footer {
@@ -103,8 +102,49 @@ a {
 footer {
     padding: 100px 0;
     background-color: #778899;
+    color: #737373;
 }
-
+.footer-text {
+     color: #C0C0C0;
+     font-size: 20px;
+}
+.footer-links a{
+     color: #C0C0C0;
+     font-size: 20px;
+}
+.footer-links a:hover {
+     opacity: 0.5;
+}
+.footer-links li {
+      margin-top: 5px;
+}
+.footer-contacts a{
+     color: #C0C0C0;
+     font-size: 20px;
+}
+.footer-phone {
+     display:block;
+     color: #C0C0C0;
+     font-size: 20px;
+}
+.footer-phone:hover {
+     color: #C0C0C0;
+      opacity: 0.5;
+}
+.footer-mail {
+     display: block;
+     color: #C0C0C0;
+     font-size: 20px;
+}
+.footer-mail:hover {
+    color: #C0C0C0;
+    opacity: 0.5;
+}
+@media(max-width: 1200px) {
+    .carousel-item img {
+    height: 100%;
+}
+}
 @media(max-width: 768px) {
     .carousel-item img {
     height: 100%;
