add to production site

--- a/css/style.css
+++ b/css/style.css
@@ -1,157 +1,181 @@
-html {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 body {
     font-family: 'Roboto', sans-serif;
 }
-ul{
+
+li {
     list-style: none;
 }
+
 a {
     text-decoration: none
 }
+
 .navbar {
-    background-color: #778899;
+    background-color: #424d4c;
+}
+
+.menu-btn {
+    background-color: white;
+}
+
+h1 {
+    color: red;
 }
 
 .navbar-brand {
     font-size: 30px;
     font-weight: 700;
     text-transform: uppercase;
-    color: #FFA500;
+    color: #FF4500;
     margin-left: 30px;
 }
-.menu-btn {
-    background-color: white;
+
+.navbar-brand:hover {
+    color: #FF4500;
+    opacity: 0.8;
 }
-.navbar-nav {
-    margin-left: 30px;
+
+.nav-link {
+    color: white;
 }
+
 .navbar-toggler {
     font-size: 1.5em;
 }
+
 .navbar-toggler-icon {
     height: 1em;
     color: #FFA500;
 }
-.navbar-brand:hover {
-  color: #FFA500;
-  opacity: 0.7;
+
+.nav-link:hover {
+    color: #D3D3D3;
 }
 
-.nav-item .nav-link {
-    color: #C0C0C0;
-    font-weight: 700;
-    font-size: 20px;
-    margin-right: 10px;
+.home__btn {
+    color: white;
+    background-color: #FF4500;
 }
 
-.nav-item .nav-link:hover {
-    opacity: 0.5;
-    color: #FF4500;
-    font-weight: 900;
-}
-
-.navbar form button {
-    background-color: Orange;
-      color: white;
-      border: none;
+.home__btn:hover {
+    background-color: #FF4500;
+    color: black;
 }
 
 .carousel-item img {
-    height: 93vh;
-    object-fit: cover
+    height: 90vh;
 }
+
 #about {
-    padding: 40px 0;
+    padding: 30px 0;
 }
 
 .card {
     border: none;
     cursor: pointer;
 }
+
+.card img {
+    height: 300px;
+}
+
 .card:hover {
     opacity: 0.9;
 }
-.card-img {
+
+.card-img-top {
     border-radius: 10px;
-    height: 250px;
 }
 
 #menu {
-    padding: 50px 0;
+    padding: 30px 0;
 }
+
 .effect {
     overflow: hidden;
-
 }
+
 .effect img {
     transition: all 1.5s ease;
     width: 100%;
     height: 200px;
 }
+
 .effect img:hover {
     transform: scale(1.5);
 }
+
 .card-footer {
     border: none;
 }
 
+.card-footer {
+    background-color: white;
+}
+
+.btn-footer {
+    background-color: #FF4500;
+    color: white;
+}
+
 footer {
     padding: 100px 0;
-    background-color: #778899;
-    color: #737373;
+    background-color: #FF4500;
+    color: black;
 }
+
 .footer-text {
-     color: #C0C0C0;
-     font-size: 20px;
+    font-size: 20px;
 }
-.footer-links a{
-     color: #C0C0C0;
-     font-size: 20px;
+
+.footer-links a {
+    color: black;
+    font-size: 20px;
 }
+
 .footer-links a:hover {
-     opacity: 0.5;
+    color: #5c4b45;
 }
-.footer-links li {
-      margin-top: 5px;
-}
-.footer-contacts a{
-     color: #C0C0C0;
-     font-size: 20px;
-}
+
 .footer-phone {
-     display:block;
-     color: #C0C0C0;
-     font-size: 20px;
+    color: black;
+    font-size: 20px;
 }
-.footer-phone:hover {
-     color: #C0C0C0;
-      opacity: 0.5;
-}
+
 .footer-mail {
-     display: block;
-     color: #C0C0C0;
-     font-size: 20px;
+    color: black;
+    font-size: 20px;
 }
+
+.footer-phone:hover {
+    color: #5c4b45;
+}
+
 .footer-mail:hover {
-    color: #C0C0C0;
-    opacity: 0.5;
+    color: #5c4b45;
 }
-@media(max-width: 1200px) {
-    .carousel-item img {
-    height: 100%;
-}
-}
+
 @media(max-width: 768px) {
+    .navbar-brand {
+        margin-left: 10px;
+        font-size: 24px;
+    }
+    .navbar-toggler {
+        font-size: 1em;
+    }
     .carousel-item img {
-    height: 100%;
-}
-.navbar-brand {
-    margin-left: 10px;
-    font-size: 24px;
-}
+        height: 100%;
+    }
+    #about {
+        padding: 20px 0;
+    }
+    .effect img {
+        height: 300px;
+    }
+    #menu {
+        padding: 20px 0;
+    }
+    footer {
+        padding: 40px 0;
+    }
 }
